@@ -1,0 +1,31 @@
+﻿// Copyright 2004-2008 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.MonoRail.Framework
+{
+	using Configuration;
+
+	/// <summary>
+	/// This interface can be implemented on the application class (the one
+	/// that extends HttpApplication)
+	/// </summary>
+	public interface IMonoRailConfigurationEvents
+	{
+		/// <summary>
+		/// Implementors can take a chance to change MonoRail's configuration.
+		/// </summary>
+		/// <param name="configuration">The configuration.</param>
+		void Configure(IMonoRailConfiguration configuration);
+	}
+}
