@@ -1,6 +1,10 @@
 1.0
 ===
 
+- Fixed MR-409
+  Introduced IMonoRailContainerEvents and IMonoRailConfigurationEvents that might be implemented by the
+  HttpApplication subclass
+
 - Fixed MR-412
   "When applying a layout attribute over an Action, layout doesn't render for the rendered view."
 
